// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineTruncation renders default line truncation 1`] = `
<DocumentFragment>
  <span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`LineTruncation renders with line truncation attribute 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;
